// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Portfolio grouped networks should apply ledger import 1`] = `
<DocumentFragment>
  <div
    class="flex justify-between items-center mb-8"
    data-testid="Portfolio__Header"
  >
    <div
      class="text-2xl font-bold"
    >
      Portfolio
    </div>
    <div
      class="text-right"
    >
      <div
        class="flex justify-end"
        data-testid="WalletControls"
      >
        <div
          class="flex relative items-center pr-5 mr-8 border-r text-theme-primary-400 border-theme-secondary-300 dark:border-theme-secondary-800"
        >
          <div
            class="relative"
          >
            <span
              data-testid="dropdown__toggle"
            >
              <span>
                <div
                  class="group"
                >
                  <button
                    class="ControlButton__ControlButtonStyled-sc-1l8cuc8-0 ckIXFQ ring-focus"
                  >
                    <div
                      class="flex justify-center items-center w-5 h-5"
                    >
                      <div
                        class="sc-bdvvtL qGXhc"
                        height="20"
                        width="20"
                      >
                        <svg>
                          sliders-vertical.svg
                        </svg>
                      </div>
                    </div>
                  </button>
                </div>
              </span>
            </span>
          </div>
        </div>
        <div
          class="flex space-x-3"
        >
          <button
            class="OriginalButton__StyledButton-sc-o0fs2j-0 cxgwmk"
            data-testid="WalletControls__import-ledger"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="flex items-center space-x-2"
              >
                <div
                  class="sc-bdvvtL fCrhkg"
                  height="16"
                  width="16"
                >
                  <svg>
                    ledger.svg
                  </svg>
                </div>
                <span>
                  Import Ledger
                </span>
              </div>
            </div>
          </button>
          <button
            class="OriginalButton__StyledButton-sc-o0fs2j-0 cxgwmk"
            data-testid="WalletControls__import-wallet"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="flex items-center space-x-2"
              >
                <div
                  class="sc-bdvvtL fCrhkg"
                  height="16"
                  width="16"
                >
                  <svg>
                    arrow-turn-down-bracket.svg
                  </svg>
                </div>
                <span>
                  Import
                </span>
              </div>
            </div>
          </button>
          <button
            class="OriginalButton__StyledButton-sc-o0fs2j-0 isLyLB"
            data-testid="WalletControls__create-wallet"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="flex items-center space-x-2"
              >
                <div
                  class="sc-bdvvtL fCrhkg"
                  height="16"
                  width="16"
                >
                  <svg>
                    plus.svg
                  </svg>
                </div>
                <span>
                  Create
                </span>
              </div>
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    data-testid="NetworkWalletsGroupList"
  >
    <div
      class="WalletsGroupblocks__WalletGroupWrapper-sc-17614tu-0 kfyqS group"
      data-testid="WalletsGroup"
    >
      <div
        class="h-20 py-4 px-4 flex flex-row items-center bg-transparent border-theme-secondary-800"
        data-testid="WalletsGroup_Header"
      >
        <div
          class="flex w-11 h-11 rounded-xl justify-center items-center bg-clip-padding hover:(border-theme-background shadow-xl) bg-theme-background text-theme-secondary-700 ring-2 ring-theme-secondary-800 group-hover:ring-theme-secondary-700 group-hover:bg-theme-secondary-800"
        >
          <div
            aria-label="ARK"
            class="w-5 h-5 inline-flex items-center text-theme-primary-600 border-theme-primary-100 dark:border-theme-primary-600"
            data-testid="NetworkIcon-ARK-ark.mainnet"
          >
            <div
              class="sc-bdvvtL qGXhc"
              data-testid="NetworkIcon__icon"
              height="20"
              width="20"
            >
              <svg>
                ark.svg
              </svg>
            </div>
          </div>
        </div>
        <div
          class="flex flex-grow space-x-3 justify-between py-3 px-3"
        >
          <h1
            class="mb-0 text-lg"
            data-testid="header__title"
          >
            ARK
          </h1>
          <div
            class="flex-grow"
          />
        </div>
        <div
          class="flex space-x-4 divide-x divide-theme-secondary-700 group-hover:divide-theme-secondary-700"
        >
          <div
            class="flex flex-col font-semibold space-y-1 pl-4 first:pl-0 text-right"
          >
            <span
              class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700 whitespace-nowrap"
            >
              Wallets
            </span>
            <span
              class="text-lg text-theme-secondary-600 dark:text-theme-secondary-200"
            >
              <span>
                <span
                  class="flex items-center leading-none"
                >
                  <span
                    class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                    style="width: 60px; height: 20px;"
                  >
                    ‌
                  </span>
                  ‌
                </span>
              </span>
            </span>
          </div>
          <div
            class="flex flex-col font-semibold space-y-1 pl-4 first:pl-0 text-right"
          >
            <span
              class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700 whitespace-nowrap"
            >
              Total balance
            </span>
            <span
              class="text-lg text-theme-secondary-900 dark:text-theme-secondary-200"
            >
              <span>
                <span
                  class="flex items-center leading-none"
                >
                  <span
                    class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                    style="width: 160px; height: 20px;"
                  >
                    ‌
                  </span>
                  ‌
                </span>
              </span>
            </span>
          </div>
          <div
            class="flex flex-col font-semibold space-y-1 pl-4 first:pl-0 text-right"
          >
            <span
              class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700 whitespace-nowrap"
            >
              Total currency
            </span>
            <span
              class="text-lg text-theme-secondary-900 dark:text-theme-secondary-200"
            >
              <span>
                <span
                  class="flex items-center leading-none"
                >
                  <span
                    class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                    style="width: 130px; height: 20px;"
                  >
                    ‌
                  </span>
                  ‌
                </span>
              </span>
            </span>
          </div>
          <div />
        </div>
        <div
          class="flex ml-4 w-8 h-8 justify-center items-center content-center cursor-pointer rounded-lg ring-2  dark:ring-theme-secondary-700 hover:ring-theme-primary-500"
          data-testid="NetworkGroup_Toggle"
        >
          <div
            class="sc-bdvvtL Cfvxc transition-transform"
            height="10"
            width="10"
          >
            <svg>
              chevron-down-small.svg
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="WalletsGroupblocks__WalletGroupWrapper-sc-17614tu-0 kfyqS group"
      data-testid="WalletsGroup"
    >
      <div
        class="h-20 py-4 px-4 flex flex-row items-center bg-transparent border-theme-secondary-800"
        data-testid="WalletsGroup_Header"
      >
        <div
          class="flex w-11 h-11 rounded-xl justify-center items-center bg-clip-padding hover:(border-theme-background shadow-xl) bg-theme-background text-theme-secondary-700 ring-2 ring-theme-secondary-800 group-hover:ring-theme-secondary-700 group-hover:bg-theme-secondary-800"
        >
          <div
            aria-label="ARK Devnet"
            class="w-5 h-5 inline-flex items-center text-theme-secondary-700 border-theme-secondary-300 dark:border-theme-secondary-700"
            data-testid="NetworkIcon-ARK-ark.devnet"
          >
            <div
              class="sc-bdvvtL qGXhc"
              data-testid="NetworkIcon__icon"
              height="20"
              width="20"
            >
              <svg>
                ark.svg
              </svg>
            </div>
          </div>
        </div>
        <div
          class="flex flex-grow space-x-3 justify-between py-3 px-3"
        >
          <h1
            class="mb-0 text-lg"
            data-testid="header__title"
          >
            ARK Devnet
          </h1>
          <div
            class="inline-block p-1 text-theme-secondary-700"
            data-testid="WalletIcon__TestNetwork"
          >
            <div
              class="sc-bdvvtL qGXhc"
              height="20"
              width="20"
            >
              <svg>
                code.svg
              </svg>
            </div>
          </div>
          <div
            class="flex-grow"
          />
        </div>
        <div
          class="flex space-x-4 divide-x divide-theme-secondary-700 group-hover:divide-theme-secondary-700"
        >
          <div
            class="flex flex-col font-semibold space-y-1 pl-4 first:pl-0 text-right"
          >
            <span
              class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700 whitespace-nowrap"
            >
              Wallets
            </span>
            <span
              class="text-lg text-theme-secondary-600 dark:text-theme-secondary-200"
            >
              <span>
                <span
                  class="flex items-center leading-none"
                >
                  <span
                    class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                    style="width: 60px; height: 20px;"
                  >
                    ‌
                  </span>
                  ‌
                </span>
              </span>
            </span>
          </div>
          <div
            class="flex flex-col font-semibold space-y-1 pl-4 first:pl-0 text-right"
          >
            <span
              class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700 whitespace-nowrap"
            >
              Total balance
            </span>
            <span
              class="text-lg text-theme-secondary-900 dark:text-theme-secondary-200"
            >
              <span>
                <span
                  class="flex items-center leading-none"
                >
                  <span
                    class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                    style="width: 160px; height: 20px;"
                  >
                    ‌
                  </span>
                  ‌
                </span>
              </span>
            </span>
          </div>
          <div
            class="flex flex-col font-semibold space-y-1 pl-4 first:pl-0 text-right"
          >
            <span
              class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700 whitespace-nowrap"
            >
              Total currency
            </span>
            <span
              class="text-lg text-theme-secondary-900 dark:text-theme-secondary-200"
            >
              <span>
                <span
                  class="flex items-center leading-none"
                >
                  <span
                    class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                    style="width: 130px; height: 20px;"
                  >
                    ‌
                  </span>
                  ‌
                </span>
              </span>
            </span>
          </div>
          <div />
        </div>
        <div
          class="flex ml-4 w-8 h-8 justify-center items-center content-center cursor-pointer rounded-lg ring-2  dark:ring-theme-secondary-700 hover:ring-theme-primary-500"
          data-testid="NetworkGroup_Toggle"
        >
          <div
            class="sc-bdvvtL Cfvxc transition-transform"
            height="10"
            width="10"
          >
            <svg>
              chevron-down-small.svg
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Portfolio grouped networks should open and close ledger import modal 1`] = `
<DocumentFragment>
  <div
    class="flex justify-between items-center mb-8"
    data-testid="Portfolio__Header"
  >
    <div
      class="text-2xl font-bold"
    >
      Portfolio
    </div>
    <div
      class="text-right"
    >
      <div
        class="flex justify-end"
        data-testid="WalletControls"
      >
        <div
          class="flex relative items-center pr-5 mr-8 border-r text-theme-primary-400 border-theme-secondary-300 dark:border-theme-secondary-800"
        >
          <div
            class="relative"
          >
            <span
              data-testid="dropdown__toggle"
            >
              <span>
                <div
                  class="group"
                >
                  <button
                    class="ControlButton__ControlButtonStyled-sc-1l8cuc8-0 ckIXFQ ring-focus"
                  >
                    <div
                      class="flex justify-center items-center w-5 h-5"
                    >
                      <div
                        class="sc-bdvvtL qGXhc"
                        height="20"
                        width="20"
                      >
                        <svg>
                          sliders-vertical.svg
                        </svg>
                      </div>
                    </div>
                  </button>
                </div>
              </span>
            </span>
          </div>
        </div>
        <div
          class="flex space-x-3"
        >
          <button
            class="OriginalButton__StyledButton-sc-o0fs2j-0 cxgwmk"
            data-testid="WalletControls__import-ledger"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="flex items-center space-x-2"
              >
                <div
                  class="sc-bdvvtL fCrhkg"
                  height="16"
                  width="16"
                >
                  <svg>
                    ledger.svg
                  </svg>
                </div>
                <span>
                  Import Ledger
                </span>
              </div>
            </div>
          </button>
          <button
            class="OriginalButton__StyledButton-sc-o0fs2j-0 cxgwmk"
            data-testid="WalletControls__import-wallet"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="flex items-center space-x-2"
              >
                <div
                  class="sc-bdvvtL fCrhkg"
                  height="16"
                  width="16"
                >
                  <svg>
                    arrow-turn-down-bracket.svg
                  </svg>
                </div>
                <span>
                  Import
                </span>
              </div>
            </div>
          </button>
          <button
            class="OriginalButton__StyledButton-sc-o0fs2j-0 isLyLB"
            data-testid="WalletControls__create-wallet"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="flex items-center space-x-2"
              >
                <div
                  class="sc-bdvvtL fCrhkg"
                  height="16"
                  width="16"
                >
                  <svg>
                    plus.svg
                  </svg>
                </div>
                <span>
                  Create
                </span>
              </div>
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    class="flex fixed inset-0 z-50 py-20 w-full h-full bg-opacity-60 dark:bg-opacity-80 bg-theme-secondary-900-rgba overflow-overlay dark:bg-black-rgba"
    data-testid="modal__overlay"
  >
    <div
      class="Modal__ModalContainer-sc-5lu2mc-0 epQFkJ"
      tabindex="-1"
    >
      <div
        class="flex overflow-hidden relative flex-col p-10 shadow-2xl rounded-2.5xl bg-theme-background"
        data-testid="modal__inner"
      >
        <div
          class="absolute top-0 right-0 z-10 mt-5 mr-5 rounded transition-all duration-100 ease-linear bg-theme-primary-100 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400 hover:bg-theme-primary-300"
        >
          <button
            class="OriginalButton__StyledButton-sc-o0fs2j-0 enzTPF w-11 h-11"
            data-testid="modal__close-btn"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="sc-bdvvtL fCrhkg"
                height="16"
                width="16"
              >
                <svg>
                  cross.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative space-y-4"
        >
          <div
            class="flex-1"
          >
            <div
              class="space-y-8"
            >
              <div
                class="flex justify-between items-end bg-theme-background"
              >
                <div
                  class="space-y-4"
                >
                  <h1
                    class="mb-0 text-2xl"
                    data-testid="header__title"
                  >
                    Ledger Wallet
                  </h1>
                  <div
                    class="text-theme-secondary-text"
                    data-testid="header__subtitle"
                  >
                    Connect your Ledger and confirm input.
                  </div>
                </div>
              </div>
              <svg
                class="mx-auto"
              >
                waiting-ledger-device-dark-green.svg
              </svg>
              <div
                class="inline-flex justify-center items-center space-x-3 w-full"
              >
                <div
                  class="Spinner-sc-1rpx65r-0 lfdpzU"
                  color="info"
                />
                <span
                  class="font-semibold animate-pulse text-theme-secondary-text"
                  data-testid="LedgerWaitingDevice-loading_message"
                >
                  Waiting for Ledger ...
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    data-testid="NetworkWalletsGroupList"
  >
    <div
      class="WalletsGroupblocks__WalletGroupWrapper-sc-17614tu-0 kfyqS group"
      data-testid="WalletsGroup"
    >
      <div
        class="h-20 py-4 px-4 flex flex-row items-center bg-transparent border-theme-secondary-800"
        data-testid="WalletsGroup_Header"
      >
        <div
          class="flex w-11 h-11 rounded-xl justify-center items-center bg-clip-padding hover:(border-theme-background shadow-xl) bg-theme-background text-theme-secondary-700 ring-2 ring-theme-secondary-800 group-hover:ring-theme-secondary-700 group-hover:bg-theme-secondary-800"
        >
          <div
            aria-label="ARK"
            class="w-5 h-5 inline-flex items-center text-theme-primary-600 border-theme-primary-100 dark:border-theme-primary-600"
            data-testid="NetworkIcon-ARK-ark.mainnet"
          >
            <div
              class="sc-bdvvtL qGXhc"
              data-testid="NetworkIcon__icon"
              height="20"
              width="20"
            >
              <svg>
                ark.svg
              </svg>
            </div>
          </div>
        </div>
        <div
          class="flex flex-grow space-x-3 justify-between py-3 px-3"
        >
          <h1
            class="mb-0 text-lg"
            data-testid="header__title"
          >
            ARK
          </h1>
          <div
            class="flex-grow"
          />
        </div>
        <div
          class="flex space-x-4 divide-x divide-theme-secondary-700 group-hover:divide-theme-secondary-700"
        >
          <div
            class="flex flex-col font-semibold space-y-1 pl-4 first:pl-0 text-right"
          >
            <span
              class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700 whitespace-nowrap"
            >
              Wallets
            </span>
            <span
              class="text-lg text-theme-secondary-600 dark:text-theme-secondary-200"
            >
              <span>
                <span
                  class="flex items-center leading-none"
                >
                  <span
                    class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                    style="width: 60px; height: 20px;"
                  >
                    ‌
                  </span>
                  ‌
                </span>
              </span>
            </span>
          </div>
          <div
            class="flex flex-col font-semibold space-y-1 pl-4 first:pl-0 text-right"
          >
            <span
              class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700 whitespace-nowrap"
            >
              Total balance
            </span>
            <span
              class="text-lg text-theme-secondary-900 dark:text-theme-secondary-200"
            >
              <span>
                <span
                  class="flex items-center leading-none"
                >
                  <span
                    class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                    style="width: 160px; height: 20px;"
                  >
                    ‌
                  </span>
                  ‌
                </span>
              </span>
            </span>
          </div>
          <div
            class="flex flex-col font-semibold space-y-1 pl-4 first:pl-0 text-right"
          >
            <span
              class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700 whitespace-nowrap"
            >
              Total currency
            </span>
            <span
              class="text-lg text-theme-secondary-900 dark:text-theme-secondary-200"
            >
              <span>
                <span
                  class="flex items-center leading-none"
                >
                  <span
                    class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                    style="width: 130px; height: 20px;"
                  >
                    ‌
                  </span>
                  ‌
                </span>
              </span>
            </span>
          </div>
          <div />
        </div>
        <div
          class="flex ml-4 w-8 h-8 justify-center items-center content-center cursor-pointer rounded-lg ring-2  dark:ring-theme-secondary-700 hover:ring-theme-primary-500"
          data-testid="NetworkGroup_Toggle"
        >
          <div
            class="sc-bdvvtL Cfvxc transition-transform"
            height="10"
            width="10"
          >
            <svg>
              chevron-down-small.svg
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="WalletsGroupblocks__WalletGroupWrapper-sc-17614tu-0 kfyqS group"
      data-testid="WalletsGroup"
    >
      <div
        class="h-20 py-4 px-4 flex flex-row items-center bg-transparent border-theme-secondary-800"
        data-testid="WalletsGroup_Header"
      >
        <div
          class="flex w-11 h-11 rounded-xl justify-center items-center bg-clip-padding hover:(border-theme-background shadow-xl) bg-theme-background text-theme-secondary-700 ring-2 ring-theme-secondary-800 group-hover:ring-theme-secondary-700 group-hover:bg-theme-secondary-800"
        >
          <div
            aria-label="ARK Devnet"
            class="w-5 h-5 inline-flex items-center text-theme-secondary-700 border-theme-secondary-300 dark:border-theme-secondary-700"
            data-testid="NetworkIcon-ARK-ark.devnet"
          >
            <div
              class="sc-bdvvtL qGXhc"
              data-testid="NetworkIcon__icon"
              height="20"
              width="20"
            >
              <svg>
                ark.svg
              </svg>
            </div>
          </div>
        </div>
        <div
          class="flex flex-grow space-x-3 justify-between py-3 px-3"
        >
          <h1
            class="mb-0 text-lg"
            data-testid="header__title"
          >
            ARK Devnet
          </h1>
          <div
            class="inline-block p-1 text-theme-secondary-700"
            data-testid="WalletIcon__TestNetwork"
          >
            <div
              class="sc-bdvvtL qGXhc"
              height="20"
              width="20"
            >
              <svg>
                code.svg
              </svg>
            </div>
          </div>
          <div
            class="flex-grow"
          />
        </div>
        <div
          class="flex space-x-4 divide-x divide-theme-secondary-700 group-hover:divide-theme-secondary-700"
        >
          <div
            class="flex flex-col font-semibold space-y-1 pl-4 first:pl-0 text-right"
          >
            <span
              class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700 whitespace-nowrap"
            >
              Wallets
            </span>
            <span
              class="text-lg text-theme-secondary-600 dark:text-theme-secondary-200"
            >
              <span>
                <span
                  class="flex items-center leading-none"
                >
                  <span
                    class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                    style="width: 60px; height: 20px;"
                  >
                    ‌
                  </span>
                  ‌
                </span>
              </span>
            </span>
          </div>
          <div
            class="flex flex-col font-semibold space-y-1 pl-4 first:pl-0 text-right"
          >
            <span
              class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700 whitespace-nowrap"
            >
              Total balance
            </span>
            <span
              class="text-lg text-theme-secondary-900 dark:text-theme-secondary-200"
            >
              <span>
                <span
                  class="flex items-center leading-none"
                >
                  <span
                    class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                    style="width: 160px; height: 20px;"
                  >
                    ‌
                  </span>
                  ‌
                </span>
              </span>
            </span>
          </div>
          <div
            class="flex flex-col font-semibold space-y-1 pl-4 first:pl-0 text-right"
          >
            <span
              class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700 whitespace-nowrap"
            >
              Total currency
            </span>
            <span
              class="text-lg text-theme-secondary-900 dark:text-theme-secondary-200"
            >
              <span>
                <span
                  class="flex items-center leading-none"
                >
                  <span
                    class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                    style="width: 130px; height: 20px;"
                  >
                    ‌
                  </span>
                  ‌
                </span>
              </span>
            </span>
          </div>
          <div />
        </div>
        <div
          class="flex ml-4 w-8 h-8 justify-center items-center content-center cursor-pointer rounded-lg ring-2  dark:ring-theme-secondary-700 hover:ring-theme-primary-500"
          data-testid="NetworkGroup_Toggle"
        >
          <div
            class="sc-bdvvtL Cfvxc transition-transform"
            height="10"
            width="10"
          >
            <svg>
              chevron-down-small.svg
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Portfolio grouped networks should render list 1`] = `
<DocumentFragment>
  <div
    class="flex justify-between items-center mb-8"
    data-testid="Portfolio__Header"
  >
    <div
      class="text-2xl font-bold"
    >
      Portfolio
    </div>
    <div
      class="text-right"
    >
      <div
        class="flex justify-end"
        data-testid="WalletControls"
      >
        <div
          class="flex relative items-center pr-5 mr-8 border-r text-theme-primary-400 border-theme-secondary-300 dark:border-theme-secondary-800"
        >
          <div
            class="relative"
          >
            <span
              data-testid="dropdown__toggle"
            >
              <span>
                <div
                  class="group"
                >
                  <button
                    class="ControlButton__ControlButtonStyled-sc-1l8cuc8-0 ckIXFQ ring-focus"
                  >
                    <div
                      class="flex justify-center items-center w-5 h-5"
                    >
                      <div
                        class="sc-bdvvtL qGXhc"
                        height="20"
                        width="20"
                      >
                        <svg>
                          sliders-vertical.svg
                        </svg>
                      </div>
                    </div>
                  </button>
                </div>
              </span>
            </span>
          </div>
        </div>
        <div
          class="flex space-x-3"
        >
          <button
            class="OriginalButton__StyledButton-sc-o0fs2j-0 cxgwmk"
            data-testid="WalletControls__import-ledger"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="flex items-center space-x-2"
              >
                <div
                  class="sc-bdvvtL fCrhkg"
                  height="16"
                  width="16"
                >
                  <svg>
                    ledger.svg
                  </svg>
                </div>
                <span>
                  Import Ledger
                </span>
              </div>
            </div>
          </button>
          <button
            class="OriginalButton__StyledButton-sc-o0fs2j-0 cxgwmk"
            data-testid="WalletControls__import-wallet"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="flex items-center space-x-2"
              >
                <div
                  class="sc-bdvvtL fCrhkg"
                  height="16"
                  width="16"
                >
                  <svg>
                    arrow-turn-down-bracket.svg
                  </svg>
                </div>
                <span>
                  Import
                </span>
              </div>
            </div>
          </button>
          <button
            class="OriginalButton__StyledButton-sc-o0fs2j-0 isLyLB"
            data-testid="WalletControls__create-wallet"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="flex items-center space-x-2"
              >
                <div
                  class="sc-bdvvtL fCrhkg"
                  height="16"
                  width="16"
                >
                  <svg>
                    plus.svg
                  </svg>
                </div>
                <span>
                  Create
                </span>
              </div>
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    data-testid="NetworkWalletsGroupList"
  >
    <div
      class="WalletsGroupblocks__WalletGroupWrapper-sc-17614tu-0 kfyqS group"
      data-testid="WalletsGroup"
    >
      <div
        class="h-20 py-4 px-4 flex flex-row items-center bg-transparent border-theme-secondary-800"
        data-testid="WalletsGroup_Header"
      >
        <div
          class="flex w-11 h-11 rounded-xl justify-center items-center bg-clip-padding hover:(border-theme-background shadow-xl) bg-theme-background text-theme-secondary-700 ring-2 ring-theme-secondary-800 group-hover:ring-theme-secondary-700 group-hover:bg-theme-secondary-800"
        >
          <div
            aria-label="ARK"
            class="w-5 h-5 inline-flex items-center text-theme-primary-600 border-theme-primary-100 dark:border-theme-primary-600"
            data-testid="NetworkIcon-ARK-ark.mainnet"
          >
            <div
              class="sc-bdvvtL qGXhc"
              data-testid="NetworkIcon__icon"
              height="20"
              width="20"
            >
              <svg>
                ark.svg
              </svg>
            </div>
          </div>
        </div>
        <div
          class="flex flex-grow space-x-3 justify-between py-3 px-3"
        >
          <h1
            class="mb-0 text-lg"
            data-testid="header__title"
          >
            ARK
          </h1>
          <div
            class="flex-grow"
          />
        </div>
        <div
          class="flex space-x-4 divide-x divide-theme-secondary-700 group-hover:divide-theme-secondary-700"
        >
          <div
            class="flex flex-col font-semibold space-y-1 pl-4 first:pl-0 text-right"
          >
            <span
              class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700 whitespace-nowrap"
            >
              Wallets
            </span>
            <span
              class="text-lg text-theme-secondary-600 dark:text-theme-secondary-200"
            >
              <span>
                <span
                  class="flex items-center leading-none"
                >
                  <span
                    class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                    style="width: 60px; height: 20px;"
                  >
                    ‌
                  </span>
                  ‌
                </span>
              </span>
            </span>
          </div>
          <div
            class="flex flex-col font-semibold space-y-1 pl-4 first:pl-0 text-right"
          >
            <span
              class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700 whitespace-nowrap"
            >
              Total balance
            </span>
            <span
              class="text-lg text-theme-secondary-900 dark:text-theme-secondary-200"
            >
              <span>
                <span
                  class="flex items-center leading-none"
                >
                  <span
                    class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                    style="width: 160px; height: 20px;"
                  >
                    ‌
                  </span>
                  ‌
                </span>
              </span>
            </span>
          </div>
          <div
            class="flex flex-col font-semibold space-y-1 pl-4 first:pl-0 text-right"
          >
            <span
              class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700 whitespace-nowrap"
            >
              Total currency
            </span>
            <span
              class="text-lg text-theme-secondary-900 dark:text-theme-secondary-200"
            >
              <span>
                <span
                  class="flex items-center leading-none"
                >
                  <span
                    class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                    style="width: 130px; height: 20px;"
                  >
                    ‌
                  </span>
                  ‌
                </span>
              </span>
            </span>
          </div>
          <div />
        </div>
        <div
          class="flex ml-4 w-8 h-8 justify-center items-center content-center cursor-pointer rounded-lg ring-2  dark:ring-theme-secondary-700 hover:ring-theme-primary-500"
          data-testid="NetworkGroup_Toggle"
        >
          <div
            class="sc-bdvvtL Cfvxc transition-transform"
            height="10"
            width="10"
          >
            <svg>
              chevron-down-small.svg
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="WalletsGroupblocks__WalletGroupWrapper-sc-17614tu-0 kfyqS group"
      data-testid="WalletsGroup"
    >
      <div
        class="h-20 py-4 px-4 flex flex-row items-center bg-transparent border-theme-secondary-800"
        data-testid="WalletsGroup_Header"
      >
        <div
          class="flex w-11 h-11 rounded-xl justify-center items-center bg-clip-padding hover:(border-theme-background shadow-xl) bg-theme-background text-theme-secondary-700 ring-2 ring-theme-secondary-800 group-hover:ring-theme-secondary-700 group-hover:bg-theme-secondary-800"
        >
          <div
            aria-label="ARK Devnet"
            class="w-5 h-5 inline-flex items-center text-theme-secondary-700 border-theme-secondary-300 dark:border-theme-secondary-700"
            data-testid="NetworkIcon-ARK-ark.devnet"
          >
            <div
              class="sc-bdvvtL qGXhc"
              data-testid="NetworkIcon__icon"
              height="20"
              width="20"
            >
              <svg>
                ark.svg
              </svg>
            </div>
          </div>
        </div>
        <div
          class="flex flex-grow space-x-3 justify-between py-3 px-3"
        >
          <h1
            class="mb-0 text-lg"
            data-testid="header__title"
          >
            ARK Devnet
          </h1>
          <div
            class="inline-block p-1 text-theme-secondary-700"
            data-testid="WalletIcon__TestNetwork"
          >
            <div
              class="sc-bdvvtL qGXhc"
              height="20"
              width="20"
            >
              <svg>
                code.svg
              </svg>
            </div>
          </div>
          <div
            class="flex-grow"
          />
        </div>
        <div
          class="flex space-x-4 divide-x divide-theme-secondary-700 group-hover:divide-theme-secondary-700"
        >
          <div
            class="flex flex-col font-semibold space-y-1 pl-4 first:pl-0 text-right"
          >
            <span
              class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700 whitespace-nowrap"
            >
              Wallets
            </span>
            <span
              class="text-lg text-theme-secondary-600 dark:text-theme-secondary-200"
            >
              <span>
                <span
                  class="flex items-center leading-none"
                >
                  <span
                    class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                    style="width: 60px; height: 20px;"
                  >
                    ‌
                  </span>
                  ‌
                </span>
              </span>
            </span>
          </div>
          <div
            class="flex flex-col font-semibold space-y-1 pl-4 first:pl-0 text-right"
          >
            <span
              class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700 whitespace-nowrap"
            >
              Total balance
            </span>
            <span
              class="text-lg text-theme-secondary-900 dark:text-theme-secondary-200"
            >
              <span>
                <span
                  class="flex items-center leading-none"
                >
                  <span
                    class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                    style="width: 160px; height: 20px;"
                  >
                    ‌
                  </span>
                  ‌
                </span>
              </span>
            </span>
          </div>
          <div
            class="flex flex-col font-semibold space-y-1 pl-4 first:pl-0 text-right"
          >
            <span
              class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700 whitespace-nowrap"
            >
              Total currency
            </span>
            <span
              class="text-lg text-theme-secondary-900 dark:text-theme-secondary-200"
            >
              <span>
                <span
                  class="flex items-center leading-none"
                >
                  <span
                    class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                    style="width: 130px; height: 20px;"
                  >
                    ‌
                  </span>
                  ‌
                </span>
              </span>
            </span>
          </div>
          <div />
        </div>
        <div
          class="flex ml-4 w-8 h-8 justify-center items-center content-center cursor-pointer rounded-lg ring-2  dark:ring-theme-secondary-700 hover:ring-theme-primary-500"
          data-testid="NetworkGroup_Toggle"
        >
          <div
            class="sc-bdvvtL Cfvxc transition-transform"
            height="10"
            width="10"
          >
            <svg>
              chevron-down-small.svg
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Portfolio grouped networks should render without testnet wallets 1`] = `
<DocumentFragment>
  <div
    class="flex justify-between items-center mb-8"
    data-testid="Portfolio__Header"
  >
    <div
      class="text-2xl font-bold"
    >
      Portfolio
    </div>
    <div
      class="text-right"
    >
      <div
        class="flex justify-end"
        data-testid="WalletControls"
      >
        <div
          class="flex relative items-center pr-5 mr-8 border-r text-theme-primary-400 border-theme-secondary-300 dark:border-theme-secondary-800"
        >
          <div
            class="relative"
          >
            <span
              data-testid="dropdown__toggle"
            >
              <span>
                <div
                  class="group"
                >
                  <button
                    class="ControlButton__ControlButtonStyled-sc-1l8cuc8-0 ckIXFQ ring-focus"
                  >
                    <div
                      class="flex justify-center items-center w-5 h-5"
                    >
                      <div
                        class="sc-bdvvtL qGXhc"
                        height="20"
                        width="20"
                      >
                        <svg>
                          sliders-vertical.svg
                        </svg>
                      </div>
                    </div>
                  </button>
                </div>
              </span>
            </span>
          </div>
        </div>
        <div
          class="flex space-x-3"
        >
          <button
            class="OriginalButton__StyledButton-sc-o0fs2j-0 cxgwmk"
            data-testid="WalletControls__import-ledger"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="flex items-center space-x-2"
              >
                <div
                  class="sc-bdvvtL fCrhkg"
                  height="16"
                  width="16"
                >
                  <svg>
                    ledger.svg
                  </svg>
                </div>
                <span>
                  Import Ledger
                </span>
              </div>
            </div>
          </button>
          <button
            class="OriginalButton__StyledButton-sc-o0fs2j-0 cxgwmk"
            data-testid="WalletControls__import-wallet"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="flex items-center space-x-2"
              >
                <div
                  class="sc-bdvvtL fCrhkg"
                  height="16"
                  width="16"
                >
                  <svg>
                    arrow-turn-down-bracket.svg
                  </svg>
                </div>
                <span>
                  Import
                </span>
              </div>
            </div>
          </button>
          <button
            class="OriginalButton__StyledButton-sc-o0fs2j-0 isLyLB"
            data-testid="WalletControls__create-wallet"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="flex items-center space-x-2"
              >
                <div
                  class="sc-bdvvtL fCrhkg"
                  height="16"
                  width="16"
                >
                  <svg>
                    plus.svg
                  </svg>
                </div>
                <span>
                  Create
                </span>
              </div>
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    data-testid="NetworkWalletsGroupList"
  >
    <div
      class="WalletsGroupblocks__WalletGroupWrapper-sc-17614tu-0 kfyqS group"
      data-testid="WalletsGroup"
    >
      <div
        class="h-20 py-4 px-4 flex flex-row items-center bg-transparent border-theme-secondary-800"
        data-testid="WalletsGroup_Header"
      >
        <div
          class="flex w-11 h-11 rounded-xl justify-center items-center bg-clip-padding hover:(border-theme-background shadow-xl) bg-theme-background text-theme-secondary-700 ring-2 ring-theme-secondary-800 group-hover:ring-theme-secondary-700 group-hover:bg-theme-secondary-800"
        >
          <div
            aria-label="ARK"
            class="w-5 h-5 inline-flex items-center text-theme-primary-600 border-theme-primary-100 dark:border-theme-primary-600"
            data-testid="NetworkIcon-ARK-ark.mainnet"
          >
            <div
              class="sc-bdvvtL qGXhc"
              data-testid="NetworkIcon__icon"
              height="20"
              width="20"
            >
              <svg>
                ark.svg
              </svg>
            </div>
          </div>
        </div>
        <div
          class="flex flex-grow space-x-3 justify-between py-3 px-3"
        >
          <h1
            class="mb-0 text-lg"
            data-testid="header__title"
          >
            ARK
          </h1>
          <div
            class="flex-grow"
          />
        </div>
        <div
          class="flex space-x-4 divide-x divide-theme-secondary-700 group-hover:divide-theme-secondary-700"
        >
          <div
            class="flex flex-col font-semibold space-y-1 pl-4 first:pl-0 text-right"
          >
            <span
              class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700 whitespace-nowrap"
            >
              Wallets
            </span>
            <span
              class="text-lg text-theme-secondary-600 dark:text-theme-secondary-200"
            >
              <span>
                <span
                  class="flex items-center leading-none"
                >
                  <span
                    class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                    style="width: 60px; height: 20px;"
                  >
                    ‌
                  </span>
                  ‌
                </span>
              </span>
            </span>
          </div>
          <div
            class="flex flex-col font-semibold space-y-1 pl-4 first:pl-0 text-right"
          >
            <span
              class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700 whitespace-nowrap"
            >
              Total balance
            </span>
            <span
              class="text-lg text-theme-secondary-900 dark:text-theme-secondary-200"
            >
              <span>
                <span
                  class="flex items-center leading-none"
                >
                  <span
                    class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                    style="width: 160px; height: 20px;"
                  >
                    ‌
                  </span>
                  ‌
                </span>
              </span>
            </span>
          </div>
          <div
            class="flex flex-col font-semibold space-y-1 pl-4 first:pl-0 text-right"
          >
            <span
              class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700 whitespace-nowrap"
            >
              Total currency
            </span>
            <span
              class="text-lg text-theme-secondary-900 dark:text-theme-secondary-200"
            >
              <span>
                <span
                  class="flex items-center leading-none"
                >
                  <span
                    class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                    style="width: 130px; height: 20px;"
                  >
                    ‌
                  </span>
                  ‌
                </span>
              </span>
            </span>
          </div>
          <div />
        </div>
        <div
          class="flex ml-4 w-8 h-8 justify-center items-center content-center cursor-pointer rounded-lg ring-2  dark:ring-theme-secondary-700 hover:ring-theme-primary-500"
          data-testid="NetworkGroup_Toggle"
        >
          <div
            class="sc-bdvvtL Cfvxc transition-transform"
            height="10"
            width="10"
          >
            <svg>
              chevron-down-small.svg
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="WalletsGroupblocks__WalletGroupWrapper-sc-17614tu-0 kfyqS group"
      data-testid="WalletsGroup"
    >
      <div
        class="h-20 py-4 px-4 flex flex-row items-center bg-transparent border-theme-secondary-800"
        data-testid="WalletsGroup_Header"
      >
        <div
          class="flex w-11 h-11 rounded-xl justify-center items-center bg-clip-padding hover:(border-theme-background shadow-xl) bg-theme-background text-theme-secondary-700 ring-2 ring-theme-secondary-800 group-hover:ring-theme-secondary-700 group-hover:bg-theme-secondary-800"
        >
          <div
            aria-label="ARK Devnet"
            class="w-5 h-5 inline-flex items-center text-theme-secondary-700 border-theme-secondary-300 dark:border-theme-secondary-700"
            data-testid="NetworkIcon-ARK-ark.devnet"
          >
            <div
              class="sc-bdvvtL qGXhc"
              data-testid="NetworkIcon__icon"
              height="20"
              width="20"
            >
              <svg>
                ark.svg
              </svg>
            </div>
          </div>
        </div>
        <div
          class="flex flex-grow space-x-3 justify-between py-3 px-3"
        >
          <h1
            class="mb-0 text-lg"
            data-testid="header__title"
          >
            ARK Devnet
          </h1>
          <div
            class="inline-block p-1 text-theme-secondary-700"
            data-testid="WalletIcon__TestNetwork"
          >
            <div
              class="sc-bdvvtL qGXhc"
              height="20"
              width="20"
            >
              <svg>
                code.svg
              </svg>
            </div>
          </div>
          <div
            class="flex-grow"
          />
        </div>
        <div
          class="flex space-x-4 divide-x divide-theme-secondary-700 group-hover:divide-theme-secondary-700"
        >
          <div
            class="flex flex-col font-semibold space-y-1 pl-4 first:pl-0 text-right"
          >
            <span
              class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700 whitespace-nowrap"
            >
              Wallets
            </span>
            <span
              class="text-lg text-theme-secondary-600 dark:text-theme-secondary-200"
            >
              <span>
                <span
                  class="flex items-center leading-none"
                >
                  <span
                    class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                    style="width: 60px; height: 20px;"
                  >
                    ‌
                  </span>
                  ‌
                </span>
              </span>
            </span>
          </div>
          <div
            class="flex flex-col font-semibold space-y-1 pl-4 first:pl-0 text-right"
          >
            <span
              class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700 whitespace-nowrap"
            >
              Total balance
            </span>
            <span
              class="text-lg text-theme-secondary-900 dark:text-theme-secondary-200"
            >
              <span>
                <span
                  class="flex items-center leading-none"
                >
                  <span
                    class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                    style="width: 160px; height: 20px;"
                  >
                    ‌
                  </span>
                  ‌
                </span>
              </span>
            </span>
          </div>
          <div
            class="flex flex-col font-semibold space-y-1 pl-4 first:pl-0 text-right"
          >
            <span
              class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700 whitespace-nowrap"
            >
              Total currency
            </span>
            <span
              class="text-lg text-theme-secondary-900 dark:text-theme-secondary-200"
            >
              <span>
                <span
                  class="flex items-center leading-none"
                >
                  <span
                    class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                    style="width: 130px; height: 20px;"
                  >
                    ‌
                  </span>
                  ‌
                </span>
              </span>
            </span>
          </div>
          <div />
        </div>
        <div
          class="flex ml-4 w-8 h-8 justify-center items-center content-center cursor-pointer rounded-lg ring-2  dark:ring-theme-secondary-700 hover:ring-theme-primary-500"
          data-testid="NetworkGroup_Toggle"
        >
          <div
            class="sc-bdvvtL Cfvxc transition-transform"
            height="10"
            width="10"
          >
            <svg>
              chevron-down-small.svg
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
